--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,10 @@ env:
     - OSX_SDK=macosx10.11
     - IOS_SDK=iphonesimulator9.2
   matrix:
-    - SCHEME="OSX"  SDK=$OSX_SDK  ACTION="build"
-    - SCHEME="iOS"  SDK=$IOS_SDK  ACTION="build"
+    - SCHEME="OSX"  SDK=$OSX_SDK  ACTION="test"
+    - SCHEME="iOS"  SDK=$IOS_SDK  ACTION="test"
 
 script:
-  - xcodebuild -version
-  - xcodebuild -showsdks
   - xcodebuild
     -project "$FRAMEWORK.xcodeproj"
     -scheme "$FRAMEWORK-$SCHEME"
@@ -27,6 +25,3 @@ script:
     GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES
     GCC_GENERATE_TEST_COVERAGE_FILES=YES
     "$ACTION"
-
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
